Cherry-pick 261724@main (ee58c2ab8371). https://bugs.webkit.org/show_bug.cgi?id=249368

REGRESSION(257515@main): breaks build with -flto=auto
    https://bugs.webkit.org/show_bug.cgi?id=249368

    Reviewed by Philippe Normand.

    Workaround compiler/linker issue with LTO enabled with certain versions
    of GCC and Binutils on Linux. Tested using a Yocto build targeting
    AArch64 (Raspberry Pi 4), with LTO enabled, which uses GCC 11.3.0 and
    Binutils 2.38.

    * Source/WebCore/Modules/speech/SpeechRecognition.cpp:
    (WebCore::SpeechRecognition::~SpeechRecognition): Define an empty
    virtual destructor.
    * Source/WebCore/Modules/speech/SpeechRecognition.h: Declare a virtual
    destructor for the class.
    * Source/WebCore/Modules/speech/SpeechRecognitionConnectionClient.h:
    (WebCore::SpeechRecognitionConnectionClient::~SpeechRecognitionConnectionClient):
    Once the complaint about the missing SpeechRecognition vtable was fixed,
    the linker started complaning about a missing virtual destructor for
    SpeechRecognitionConnectionClient, which is definitely a compiler bug
    given that it was defaulted; but using an empty inline destructor in the
    header workarounds the issue.

    Canonical link: https://commits.webkit.org/261724@main