Source/WebCore/Modules/speech/SpeechRecognition.h
@@ -63,6 +63,8 @@ public:
     using RefCounted::ref;
     using RefCounted::deref;
 
+    virtual ~SpeechRecognition();
+
 private:
     enum class State {
         Inactive,
